fix centering on small screens

--- a/packages/pedia/src/index.css
+++ b/packages/pedia/src/index.css
@@ -17,10 +17,6 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-html, body, #root {
-  height: 100%;
-}
-
 ::-webkit-scrollbar {
   width: 4px;
   height: 4px;
